--- a/mod.yml
+++ b/mod.yml
@@ -1,6 +1,6 @@
 title: Command Inputs
 originalAuthor: Zurphing
-description: Activate combo modifiers using various command inputs with the left stick, L2 & R2 buttons.
+description: Activate combo modifiers using various command inputs with the left stick, L3, L2 & R2 buttons. L2 + Up = Flash Step(Ground) & Aerial Dive(Air)
 assets:
 - name: scripts/CommandInputs.lua
   method: copy
