Replace hard-coded offset version with Ptya pointer version. Preserves compatibilities when offsets change.

--- a/mod.yml
+++ b/mod.yml
@@ -5,4 +5,4 @@ assets:
 - name: scripts/CommandInputs.lua
   method: copy
   source:
-  - name: CommandInputs.lua
+  - name: CommandInputs[PTYAPointerVer].lua
