--- a/mod.yml
+++ b/mod.yml
@@ -5,4 +5,19 @@ assets:
 - name: scripts/CommandInputs.lua
   method: copy
   source:
-  - name: CommandInputs[PTYAPointerVer].lua
+  - name: CommandInputs.lua
+- name: msg/jp/sys.bar
+  multi:
+  - name: msg/us/sys.bar
+  - name: msg/fr/sys.bar
+  - name: msg/gr/sys.bar
+  - name: msg/it/sys.bar
+  - name: msg/sp/sys.bar
+  method: binarc
+  source:
+  - name: sys
+    type: list
+    method: kh2msg
+    source:
+    - name: sys.yml
+      language: en
